@@ -5,15 +5,7 @@ use warnings;
 
 use Test::More;
 
-BEGIN { plan tests => 17 }
+use Test::Requires qw/ XMLRPC::Lite XMLRPC::Test /;
 
-eval { require XMLRPC::Lite };
-
-SKIP: {
-
-    skip 'need XMLRPC::Lite', 17 if $@;
-
-    XMLRPC::Test::Server::run_for( shift || 'http://localhost/mod_xmlrpc' );
-
-}
+XMLRPC::Test::Server::run_for( shift || 'http://localhost/mod_xmlrpc' );
 
